# canpull

./: .gitignore  LICENSE  README.md  pyproject.toml
src/canpull/: cli.py  client.py  config.py  models.py
src/canpull/commands/: announcements.py  assignments.py  config.py  courses.py  download.py  files.py  modules.py  pages.py  read.py  whoami.py
src/canpull/utils/: display.py  pdf.py  text.py
tests/: test_models.py
