[project]
name = "canpull"
version = "0.1.0"
description = "CLI tool for accessing Canvas LMS"
authors = [
    { name = "intimyp", email = "intimyp@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "markdownify>=1.2.2",
    "pdfplumber>=0.11.9",
    "typer>=0.12.0",
    "rich>=14.3.3",
]

[project.scripts]
canpull = "canpull.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.0",
    "pyright>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=canpull --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["canpull"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src"]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
